--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,6 +1,10 @@
 {
   "routes": [
     {
+      "route": "/",
+      "allowedRoles": ["anonymous"]
+    },
+    {
       "route": "/*",
       "allowedRoles": ["anonymous"]
     }
